--- a/src/ApplicationUI/createProject.fxml
+++ b/src/ApplicationUI/createProject.fxml
@@ -13,7 +13,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationUI.createProjectController">
    <center>
                 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="806.0" styleClass="background" stylesheets="@application.css">
@@ -41,14 +40,13 @@
                                         <String fx:value="primaryButton" />
                                     </styleClass>
                                 </Button>
-                                <Text fx:id="errorTextField" fill="RED" layoutX="223.0" layoutY="326.0" strokeType="OUTSIDE" strokeWidth="0.0" />
                                 <Label fx:id="taskNameLabel1" layoutX="72.0" layoutY="65.0" styleClass="font" stylesheets="@application.css" text="Enter Status:" textFill="WHITE">
                                     <font>
                                         <Font size="24.0" />
                                     </font>
                                 </Label>
                                 <TextField fx:id="fypStatusField" layoutX="227.0" layoutY="65.0" prefHeight="26.0" prefWidth="229.0" />
-                                <Text fx:id="createErrorMsg" fill="RED" layoutX="223.0" layoutY="123.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" />
+                  <Text fx:id="createErrorMsg" fill="WHITE" layoutX="185.0" layoutY="115.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="115.73675537109375" />
                             </children>
                         </Pane>
                         <ImageView fitHeight="160.0" fitWidth="258.0" layoutX="274.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true">
