--- a/src/ApplicationUI/suggestTask.fxml
+++ b/src/ApplicationUI/suggestTask.fxml
@@ -69,7 +69,7 @@
                                                 <String fx:value="primaryButton" />
                                              </styleClass>
                                           </Button>
-                                          <Text fx:id="errorTextField" fill="RED" layoutX="223.0" layoutY="326.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+                                          <Text fx:id="errorTextField" fill="WHITE" layoutX="159.0" layoutY="370.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="149.60000610351562" />
                                           <ImageView fitHeight="176.0" fitWidth="243.0" layoutX="102.0" layoutY="14.0" pickOnBounds="true">
                                              <image>
                                                 <Image url="@../images/suggestBrainstorm.png" />
